# spatial-index-comparison

./: README.md  debug_coordinate_error.py  main.py  original_github_app.py  pyproject.toml  test_query_fix.py
docs/: 01_executive_summary.md  02_research_introduction.md  03_introduction.md  04_academic_literature_review.md  05_system_requirements.md  06_implementation_details.md  07_testing_and_performance_evaluation.md  08_conclusion.md  09_dataset_documentation.md  10_technical_diagrams.md
examples/: basic_example.py
src/zm_rtree_research/: __init__.py  cli.py
src/zm_rtree_research/data/: __init__.py  loader.py
src/zm_rtree_research/evaluation/: __init__.py  evaluator.py
src/zm_rtree_research/gui/: __init__.py  app.py
src/zm_rtree_research/indexes/: __init__.py  rtree_index.py  zm_linear.py  zm_mlp.py
src/zm_rtree_research/query/: __init__.py  engine.py
